bug fix about text doesn't justify on safari

--- a/styles.css
+++ b/styles.css
@@ -194,6 +194,6 @@ select {
 
 /*=================================================================*/
 #about {
-    text-align: justify;
+    text-align: justify !important;
     width: 75%;
 }
